; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_analysis.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_analysis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_HEAD_FILE = common dso_local global i32 0, align 4
@GIT_ERROR_MERGE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"failed to lookup HEAD reference\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_merge_analysis(i32* %0, i32* %1, i32* %2, i32** %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32** %3, i32*** %10, align 8
  store i64 %4, i64* %11, align 8
  store i32* null, i32** %12, align 8
  store i32 0, i32* %13, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = load i32, i32* @GIT_HEAD_FILE, align 4
  %16 = call i32 @git_reference_lookup(i32** %12, i32* %14, i32 %15)
  store i32 %16, i32* %13, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %5
  %19 = load i32, i32* @GIT_ERROR_MERGE, align 4
  %20 = call i32 @git_error_set(i32 %19, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* %13, align 4
  store i32 %21, i32* %6, align 4
  br label %33

22:                                               ; preds = %5
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = load i32**, i32*** %10, align 8
  %28 = load i64, i64* %11, align 8
  %29 = call i32 @git_merge_analysis_for_ref(i32* %23, i32* %24, i32* %25, i32* %26, i32** %27, i64 %28)
  store i32 %29, i32* %13, align 4
  %30 = load i32*, i32** %12, align 8
  %31 = call i32 @git_reference_free(i32* %30)
  %32 = load i32, i32* %13, align 4
  store i32 %32, i32* %6, align 4
  br label %33

33:                                               ; preds = %22, %18
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32 @git_reference_lookup(i32**, i32*, i32) #1

declare dso_local i32 @git_error_set(i32, i8*) #1

declare dso_local i32 @git_merge_analysis_for_ref(i32*, i32*, i32*, i32*, i32**, i64) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
